--- a/css/style.css
+++ b/css/style.css
@@ -27,11 +27,10 @@ body{
     align-items: center;
     color: var(--color-white);
     padding: 0 10px;
-    opacity: .8;
 }
 #main-nav img{
     width: 40%;
-    height: 80%;
+    height: 100%;
     cursor: pointer;
     transition: all ease 1s;
 }
@@ -49,6 +48,7 @@ body{
     position: relative;
     justify-content: space-evenly;
     align-items: center;
+    background-color: #000;
 }
 .links li{
     list-style-type: none;
@@ -248,7 +248,7 @@ footer a:nth-child(5):hover{
     }
     #main-nav img{
         width: 80%;
-        height: 70%;
+        height: 100%;
         margin-bottom: 18px;
     }
     .hamburger span{
@@ -260,12 +260,18 @@ footer a:nth-child(5):hover{
         border-radius: 10px;
     }
     .hamburger{
-        top: 40px;
+        top: 50px;
     }
     footer{
         width: 80%;
         margin: auto;
         background: linear-gradient(to left, #000, #111, #222, #333, #222, #111, #000);
+    }
+    .br-1.animate{
+        transform: rotate(-45deg) translate(-5px, 6px) scale(1.3);
+    }
+    .br-3.animate{
+        transform: rotate(45deg) translate(-5px, -6px) scale(1.3);
     }
 }
 @media (max-width: 280px){
