--- a/css/style.css
+++ b/css/style.css
@@ -109,9 +109,10 @@ body{
 .title{
     color: var(--color-white);
     margin: 0 auto;
-    font-size: 3rem;
+    font-size: 2.6rem;
     text-align: center;
     font-family: var(--primary-font);
+    height: 50px;
 }
 .art-1{
     display: flex;
@@ -120,8 +121,10 @@ body{
     flex-direction: column;
     width: 40%;
     height: 82vh;
+
 }
 .art-1 img{
+    margin-top: 30px;
     width: 250px;
     height: 250px;
     border-radius: 10px;
@@ -222,9 +225,11 @@ footer a:nth-child(5):hover{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    flex-wrap: wrap;
     background: rgba(1, 1, 1, 60%);
     width: 100%;
-    height: 40vh;
+    min-height: 40vh;
+    height: auto;
 }
 .photos img{
     width: 200px;
@@ -260,6 +265,7 @@ footer a:nth-child(5):hover{
         align-items: flex-start;
         justify-content: center;
         padding-top: 20px;
+
     }
     #main-nav img{
         width: 60%;
@@ -277,7 +283,7 @@ footer a:nth-child(5):hover{
         width: 100%;
         display: none;
         opacity: 0;
-        background-color: #000;
+        background-color: rgba(1, 1, 1, 95%);
         z-index: 99;
     }
     .links li{
@@ -316,6 +322,35 @@ footer a:nth-child(5):hover{
         height: 200px;
         border-radius: 10px;
         filter: drop-shadow(5px 5px 10px #ffffff);
+    }
+    .photos{
+        flex-direction: column;
+        column-gap: 10px;
+    }
+    .photos img{
+        margin: 20px auto;
+    }
+    .desc{
+        margin: 40px auto;
+    }
+    .desc p{
+        font-size: 1rem;
+        margin: 10px auto;
+        text-align: center;
+        color: var(--color-white2);
+        font-family: var(--primary-font);
+    }
+    .body{
+        overflow-y: auto;
+        background: no-repeat 50% 50% url(../img/bg-.jpg);
+        background-size: cover;
+        background-position: center;
+        min-height: 100vh;
+        height: auto;
+        backdrop-filter: brightness(40%);
+    }
+    .no-overflow{
+        overflow-y: hidden;
     }
 }
 @media (max-width: 450px){
