--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,8 @@ body{
     align-items: center;
     color: var(--color-white);
     padding: 0 10px;
-
+    font-family: 'Poppins', sans-serif;
+    
 }
 #main-nav img{
     padding: 5px;
@@ -63,8 +64,9 @@ body{
     color: var(--color-white2);
     letter-spacing: 2px;
     font-size: 1.7rem;
-    font-family: var(--primary-font);
+    font-family: 'Poppins', sans-serif;
     transition: all ease 1s;
+
 }
 .links li:hover{
     transform: scale(1.1);
@@ -118,7 +120,7 @@ body{
     margin: 10px auto;
     font-size: 2.8rem;
     text-align: center;
-    font-family: var(--primary-font);
+    font-family: 'Rock Salt', cursive;
     height: 50px;
 }
 .art-1{
@@ -143,11 +145,12 @@ body{
     margin: 5px auto;
     text-align: center;
     color: var(--color-white2);
-    font-family: var(--primary-font);
+    font-family: 'Poppins', sans-serif;
 }
 .art-1 span{
     color: #fff;
     margin-top: 5px;
+    font-family: 'Poppins', sans-serif;
 }
 .art-2{
     display: flex;
@@ -177,6 +180,7 @@ footer{
     padding: 10px;
     margin: 10px;
     height: 60px;
+    font-family: 'Poppins', sans-serif;
 }
 footer a{
     color: var(--color-white2);
@@ -205,40 +209,32 @@ footer a:nth-child(5):hover{
 }
 
 
-
-
-
-/*------------------SOCIAL----------------------*/
-
-
-
-
-
-
-
+/*------------------BLOG----------------------*/
 
 .desc{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 40vh;
+    min-height: 50vh;
+    height: auto;
     width: 100%;
     text-align: center;
 }
 .desc h1{
     color: var(--color-white);
     margin: 0 auto;
-    font-size: 3.6rem;
+    font-size: 3.3rem;
     text-align: center;
-    font-family: var(--primary-font);
+    font-family: 'Rock Salt', cursive;
 }
 .desc p{
+    width: 80%;
     font-size: 1.2rem;
     margin: 0 auto;
     text-align: center;
     color: var(--color-white2);
-    font-family: var(--primary-font);
+    font-family: 'Poppins', sans-serif;
 }
 .photos{
     display: flex;
@@ -255,14 +251,6 @@ footer a:nth-child(5):hover{
     height: 200px;
     border-radius: 10px;
 }
-
-
-
-
-
-
-
-
 
 
 /*---------------MUSIC------------*/
@@ -295,12 +283,13 @@ footer a:nth-child(5):hover{
     text-align: center;
     color: var(--color-white);
     margin: 10px auto;
+    font-family: 'Rock Salt', cursive;
 }
 .music-img{
     min-height: 50vh;
     height: auto;
     display: flex;
-    width: 80%;
+    width: 90%;
     margin: 0 auto;
     justify-content: space-around;
     align-items: center;
@@ -330,10 +319,11 @@ footer a:nth-child(5):hover{
     color: #1ed760;
 }
 .music_info{
-    width: 50%;
+    width: 90%;
+    height: auto;
     margin: 20px 0;
     color: #fff;
-    font-family: var(--primary-font);
+    font-family: 'Poppins', sans-serif;
 }
 .title-{
     font-size: 3rem;
@@ -341,6 +331,7 @@ footer a:nth-child(5):hover{
 }
 .music_info span{
     font-size: 1.5rem;
+    font-family: 'Poppins', sans-serif;
 }
 .footer_info{
     display: flex;
@@ -351,17 +342,8 @@ footer a:nth-child(5):hover{
     margin: 10px auto;
     font-size: 1rem;
     color: var(--color-white);
+    font-family: 'Poppins', sans-serif;
 }
-
-
-
-
-
-
-
-
-
-
 
 
     /*----Overflow control----*/
@@ -466,13 +448,11 @@ footer a:nth-child(5):hover{
         margin: 10px auto;
         text-align: center;
         color: var(--color-white2);
-        font-family: var(--primary-font);
+        font-family: 'Rock Salt', cursive;
     }    
     .art-1 span{
         font-size: .8rem;
     }
-
-
 
 
 
@@ -524,7 +504,7 @@ footer a:nth-child(5):hover{
         background: transparent;
     }
 
-    /*----MUSIC*/
+    /*----MUSIC------*/
     .music-i iframe{
         height: 40vh;
     }
@@ -562,10 +542,31 @@ footer a:nth-child(5):hover{
     .br-3.animate{
         transform: rotate(45deg) translate(-5px, -6px) scale(1.3);
     }
+    .desc h1{
+        font-size: 2.5rem;
+    }
+    .footer_info{
+        font-size: .7rem;
+        height: auto;
+        width: 100%;
+        margin: 0 auto;
+        flex-direction: column;
+    }
+    .music_info{
+        width: 90%;
+    }
+    .title-{
+        font-size: 2rem;
+        height: 50px;
+    }
 }
 @media (max-width: 280px){
     .hamburger{
         top: 40%;
+    }
+    .title-{
+        font-size: 1.5rem;
+        height: 50px;
     }
 }
 /*Media Heights*/
@@ -574,6 +575,7 @@ footer a:nth-child(5):hover{
 
     .title{
         margin: 0 auto;
+        font-size: 2rem;
     }
     footer{
         margin: 0 auto;
