--- a/css/style.css
+++ b/css/style.css
@@ -497,6 +497,9 @@ footer a:nth-child(5):hover{
     #main-nav img{
         width: 80%;
     }
+    .links{
+        top: 150px;
+    }
     .hamburger{
         top: 35%;
     }
