--- a/css/style.css
+++ b/css/style.css
@@ -383,7 +383,7 @@ footer a:nth-child(5):hover{
     }
     .links{
         position: absolute;
-        top: 14vh;
+        top: 130px;
         right: 0;
         flex-direction: column;
         align-items: center;
@@ -497,7 +497,9 @@ footer a:nth-child(5):hover{
     #main-nav img{
         width: 80%;
     }
-
+    .links{
+        top: 130px;
+    }
     .hamburger{
         top: 35%;
     }
