--- a/css/style.css
+++ b/css/style.css
@@ -170,9 +170,6 @@ body{
 }
 
 
-
-
-
 footer{
     display: flex;
     justify-content: space-around;
@@ -211,7 +208,7 @@ footer a:nth-child(5):hover{
 }
 
 
-/*------------------BLOG----------------------*/
+/*----------------------------------BLOG--------------------------------*/
 
 .desc{
     display: flex;
@@ -240,22 +237,21 @@ footer a:nth-child(5):hover{
 }
 .photos{
     display: flex;
-    justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
     background: rgba(1, 1, 1, 60%);
     width: 100%;
-    min-height: 40vh;
+    min-height: 50vh;
     height: auto;
 }
 .photos img{
-    width: 200px;
-    height: 200px;
-    border-radius: 10px;
+    width: 350px;
+    height: 350px;
+    margin: 20px;
 }
 
 
-/*---------------MUSIC------------*/
+/*---------------------------MUSIC--------------------*/
 
 .sec_music{
     width: 95%;
@@ -297,8 +293,8 @@ footer a:nth-child(5):hover{
     align-items: center;
 }
 .music-img img{
-    width: 250px;
-    height: 250px;
+    width: 300px;
+    height: 300px;
     border-radius: 10px;
     filter: drop-shadow(0px 0px 8px #ffffff);
 }
@@ -361,6 +357,21 @@ footer a:nth-child(5):hover{
 
 /*---------------------Media--------------------*/
 
+@media (min-width: 868px){
+    .photos{
+        
+        justify-content: center;
+        margin-top: 70px;
+        margin-bottom: 70px;
+        margin-right: 15px;
+    }
+    .photos img{
+        display: flex;
+        flex: 0 0 calc(33.3% -1rem);
+        justify-content: center;
+    }
+    
+}
 @media (max-width: 868px){
     .hamburger{
         display: block;
@@ -401,7 +412,7 @@ footer a:nth-child(5):hover{
     .links li{
         width: 100%;
         text-align: center;
-        padding: 20px;
+        padding: 0px;
     }
     .active{
         display: flex;
@@ -422,7 +433,6 @@ footer a:nth-child(5):hover{
     }
     .art-1{
         width: 100%;
-
     }
     .art-1 p{
         margin: 10px auto;
@@ -437,11 +447,11 @@ footer a:nth-child(5):hover{
         filter: drop-shadow(5px 5px 10px #ffffff);
     }
     .photos{
-        flex-direction: column;
-        column-gap: 10px;
+        display: grid;
+        grid-template-columns: 1;
     }
     .photos img{
-        margin: 20px auto;
+        margin: 10px auto;
     }
     .desc{
         margin: 40px auto;
@@ -458,7 +468,7 @@ footer a:nth-child(5):hover{
 
 
 
-    /*----MUSIC MEDIA--------*/
+    /*------------MUSIC MEDIA--------*/
     .music-i iframe{
         width: 90%;
     }
@@ -469,8 +479,8 @@ footer a:nth-child(5):hover{
         align-items: space-around;
     }
     .music-img img{
-        width: 200px;
-        height: 200px;
+        width: 150px;
+        height: 150px;
         margin: 20px auto;
     }
     .music_info{
@@ -509,7 +519,8 @@ footer a:nth-child(5):hover{
         background: transparent;
     }
 
-    /*----MUSIC------*/
+    /*-------------------MUSIC--------------------*/
+
     .music-i iframe{
         height: 40vh;
     }
@@ -551,7 +562,7 @@ footer a:nth-child(5):hover{
         font-size: 2.5rem;
     }
     .footer_info{
-        font-size: .7rem;
+        font-size: .4rem;
         height: auto;
         width: 100%;
         margin: 0 auto;
@@ -589,9 +600,7 @@ footer a:nth-child(5):hover{
     }
 }
 
-/*Animations*/
-
-
+/*--------------Animations--------------*/
 
 .LtR{
    animation: LtR 1s ease; 
