--- a/css/style.css
+++ b/css/style.css
@@ -231,9 +231,12 @@ footer a:nth-child(5):hover{
     width: 80%;
     font-size: 1.2rem;
     margin: 0 auto;
-    text-align: center;
+    text-align: justify;
     color: var(--color-white2);
     font-family: 'Poppins', sans-serif;
+}
+.desc--fecha p{
+    text-align: center;
 }
 .photos{
     display: flex;
@@ -459,7 +462,7 @@ footer a:nth-child(5):hover{
     .desc p{
         font-size: 1rem;
         margin: 10px auto;
-        text-align: center;
+        text-align: justify;
         color: var(--color-white2);
     }    
     .art-1 span{
