--- a/css/style.css
+++ b/css/style.css
@@ -156,17 +156,25 @@ body{
 }
 .art-2{
     display: flex;
-    width: 60%;
-    height: 82vh; 
+    width: 350px;
+    height: 350px;
+    overflow: hidden;
+    margin-bottom: 100px;
+
 
 }
 .art-2 img{
-    height: 100%;
-    width: 100%;
-    filter: grayscale(50%) drop-shadow(5px 5px 14px #a76577);
+    position: absolute;
+    width: 350px;
+    height: 350px;
     background: transparent;
     background-size: cover;
     background-position: center;
+    border-radius: 50%;
+
+}
+.art-2 img:nth-child(1){
+    z-index: 99;
 }
 
 
@@ -207,7 +215,14 @@ footer a:nth-child(5):hover{
     color: #1ed760;
 }
 
-
+.Information{
+    display: flex;
+    width: 80%;
+    height: auto;
+    margin-top: auto;
+    text-align: center;
+    justify-content: space-between;
+}
 /*----------------------------------BLOG--------------------------------*/
 
 .desc{
